crates/aven-check/tests/fixtures/check/valid/set-spread-value.av
a = @{ 1, 2 }
b = @{ 2, 3 }
merged = @{ ..a, ..b }
annotated : Set[Int] = @{ ..merged, 4 }
