crates/aven-check/tests/fixtures/check/invalid/set-spread-non-set.av
s : Set[Int] = @{ ..[1, 2] }
